[package]
name = "qmk_nowplaying"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.0-rc2"
hidapi = { version = "1.4.1", default-features = false, features = ["linux-static-hidraw"]}
bincode = "1.3.3"
serde = { version = "1.0.141", features = ["derive"] }
