[package]
name = "qmk-oled-api"
version = "0.1.0-alpha.1"
description = "A HID-wrapper API for QMK keyboards designed to make it significantly easier to draw to OLED screens remotely"
license = "MIT"
authors = [
    "Daniel O'Brien <dob9601@gmail.com>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
image = "0.24.3"
hidapi = { version = "1.4.1", default-features = false, features = ["linux-static-hidraw"]}
bincode = "1.3.3"
serde = { version = "1.0.141", features = ["derive"] }
fontdue = "0.7.2"
